# graphics-personal

./: .gitignore  README.md
lab00/: README.txt  data1.txt  data2.txt  input.csv  main.c  output.txt  toCompile.txt
labs-textbook/: CMakeLists.txt
labs-textbook/A1/: CMakeLists.txt
labs-textbook/A1/A1/: A1.cpp  ArcballCamera.h  CMakeLists.txt  fragment_gouraud.fs  fragment_phong.fs  vertex.vs  vertex_gouraud.vs  vertex_phong.vs
labs-textbook/A2/: CMakeLists.txt
labs-textbook/A2/A2/: A2.cpp  CMakeLists.txt
labs-textbook/A2/A2/shader/: teapot_fragment.fs  wireframe_fragment.fs  wireframe_geometry.gs  wireframe_vertex.vs
labs-textbook/A3/: CMakeLists.txt  README.txt
labs-textbook/A3/A3/: A3.cpp  CMakeLists.txt
labs-textbook/A3/A3/shaders/: A3.fs
labs-textbook/OGLEngine/: CMakeLists.txt  README.txt  compile.ps1  compile_debug.ps1  debug.ps1  run.ps1
labs-textbook/OGLEngine/OGLEngine/: CMakeLists.txt  Camera.hpp  FreeCam.hpp  OGLEngine.cpp  OGLEngine.hpp  main.cpp  objects.hpp
labs-textbook/OGLEngine/OGLEngine/shader/: intersectTriangle.fs  rt.fs  rt.vs  teapot_fragment.fs  wireframe_fragment.fs  wireframe_geometry.gs  wireframe_vertex.vs
labs-textbook/OGLEngine/glad/: CMakeLists.txt
labs-textbook/OGLEngine/ingredients/: CMakeLists.txt  icosahedron.cpp  icosahedron.h  objects.hpp  teapotpatch.cpp
labs-textbook/OGLEngine/src/: ArcballCam.hpp  CMakeLists.txt  GLSLShader.hpp  Materials.hpp  OGLEngine.cpp  OGLEngine.hpp  README.txt
labs-textbook/OGLEngine/src/shader/: rt.vs  wireframe_fragment.fs  wireframe_geometry.gs
labs-textbook/a01/: A1Engine.cpp  A1Engine.h  CMakeLists.txt  main.cpp
labs-textbook/ingredients/: scenerunner.h
labs-textbook/lab01/: CMakeLists.txt  scenebasic.cpp  scenebasic.h
labs-textbook/lab01/shader/: basic.vert.glsl
labs-textbook/lab02/: CMakeLists.txt
labs-textbook/lab02/lab02/: CMakeLists.txt  lab02.cpp  vertex.vs
labs-textbook/lab03_src/: CMakeLists.txt
labs-textbook/lab03_src/lab03/: CMakeLists.txt  README.txt  lab03.cpp
labs-textbook/lab03_src/lab03/shader/: lab03.tes
labs-textbook/lab03_src/lab03_teapot/: CMakeLists.txt  lab03.cpp
labs-textbook/lab04_src/: CMakeLists.txt
labs-textbook/lab04_src/lab04/: CMakeLists.txt  lab04.cpp
labs-textbook/lab04_src/lab04/shader/: lab04.fs  lab04.vs
labs-textbook/lab05_src/: CMakeLists.txt
labs-textbook/lab05_src/ingredients/: CMakeLists.txt
labs-textbook/lab05_src/lab05/: CMakeLists.txt  lab05.cpp  lab05.h
labs-textbook/lab05_src/lab05/shaders/: lab05.fs  lab05.vs
labs-textbook/lab06_src/: CMakeLists.txt
labs-textbook/lab06_src/ingredients/: CMakeLists.txt
labs-textbook/lab06_src/lab06/: CMakeLists.txt  lab06.cpp  lab06.h
labs-textbook/lab07_src/: CMakeLists.txt
labs-textbook/lab07_src/ingredients/: CMakeLists.txt
labs-textbook/lab07_src/lab07/: CMakeLists.txt  lab07.cpp
labs-textbook/lab07_src/lab07/shaders/: lab07.fs
labs-textbook/shaderplayground/: CMakeLists.txt  scenebasic.h
